--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
-      # Setup NET 6
+      # Setup .NET 6
       - uses: actions/checkout@v2
       - name: Setup .NET 6
         uses: actions/setup-dotnet@v1
@@ -19,11 +19,11 @@ jobs:
 
       # Publish BlazorServerUpdate
       - name: Publish BlazorServerUpdate
-        run: dotnet publish 'BlazorServerUpdate/BlazorServerUpdate.csproj' -c Release --self-contained false -o ${{ github.workspace }}/blazorserverupdate
+        run: dotnet publish 'BlazorServerUpdate/BlazorServerUpdate.csproj' -c Release --self-contained false -o ${{ github.workspace }}/blazorserverupdate/publish
 
       # Upload Publish Artifact for BlazorServerUpdate
-      - name: Upload BlazorServerUpdate Publish Artifact
+      - name: Upload Publish Artifact for BlazorServerUpdate
         uses: actions/upload-artifact@v2
         with:
           name: blazorserverupdate
-          path: ${{ github.workspace }}/blazorserverupdate/          
+          path: ${{ github.workspace }}/blazorserverupdate/publish
